--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,21 @@ disallow_untyped_defs = true
 
 [tool.ruff]
 line-length = 100
-select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
-ignore = ["E501"]
 target-version = "py38"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "RUF"]
+ignore = [
+    "E501",  # Line too long (handled by formatter)
+    "UP",    # Pyupgrade (avoid Python 3.10+ syntax changes)
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
